# LocustSwarm

./: .env.example  .gitignore  DOCS.md  README.md  app.py  config.example.json  gunicorn.conf.py  pyproject.toml
api/: config.py  debug.py  results.py  tests.py
config/: settings.py
db/: db.py
models/: config.py  errors.py  tests.py
static/: index.css  index.js
templates/: docs.html  index.html
tests/: utils.py
tests/project_1/: metrics.py  regular.py  stress.py
tests/project_2/: custom.py  regular.py  stress.py
utils/: app.py  cleaner.py  docker.py  fakes.py  generator.py  zip.py
