[project]
name = "locust-swarm"
version = "1.0"
description = "Locust Swarm"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "locust>=2.42.5",
    "markdown>=3.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]
